# Blueprints

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  _typos.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  settings.yml
.github/actions/setup/: action.yml
.github/scripts/: smoke.py
.github/workflows/: _security.yml  ci.yml  labeler.yml  verify-meta.yml  verify-stack.yml  weekly.yml
scripts/: check-action-updates.sh  check-dockerfile-updates.sh  check-precommit-updates.sh
stacks/: README.md
stacks/astro-ts-react/: README.md  SETUP.md  VERIFICATION.md  copier.yml
stacks/astro-ts-react/template/: .gitignore.jinja  README.md.jinja  justfile.jinja  package.json.jinja  tsconfig.json.jinja
stacks/astro-ts-react/template/.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja
stacks/astro-ts-react/template/.github/workflows/: ci.yml.jinja
stacks/astro-ts-react/template/src/: env.d.ts.jinja
stacks/astro-ts-react/template/src/components/: App.tsx.jinja
stacks/astro-ts-react/template/src/components/motion/: MotionDemo.tsx.jinja  MotionReveal.tsx.jinja  MotionStagger.tsx.jinja
stacks/astro-ts-react/template/src/layouts/: BaseLayout.astro.jinja
stacks/astro-ts-react/template/src/lib/: config.ts.jinja
stacks/astro-ts-react/template/src/lib/motion/: a11y.ts.jinja  cleanup.ts.jinja  in-view.ts.jinja  presets.ts.jinja  reduced-motion.ts.jinja  route.ts.jinja  timeline.ts.jinja  tokens.ts.jinja
stacks/astro-ts-react/template/src/pages/: index.astro.jinja
stacks/astro-ts-react/template/src/styles/: global.css.jinja  motion.css.jinja
stacks/astro-ts-react/template/src/types/: global.d.ts.jinja
stacks/astro-ts-react/template/tests/: smoke.test.ts.jinja
stacks/astro-ts-react/template/tests/helpers/: disable-animations.ts.jinja
stacks/astro-ts-react/template/tests/unit/motion/: presets.test.ts.jinja  reduced-motion.test.ts.jinja  tokens.test.ts.jinja
stacks/astro-ts-react/verify/: README.md  answers.yml  trigger.py
stacks/python-cli/: README.md  SETUP.md  VERIFICATION.md  copier.yml
stacks/python-cli/actions/setup/: action.yml
stacks/python-cli/template/: .dockerignore  .dockerignore.jinja  .editorconfig  .editorconfig.jinja  .gitattributes  .gitattributes.jinja  .gitignore  .gitignore.jinja  .markdownlint-cli2.jsonc.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  AGENTS.md  CHANGELOG.md  CHANGELOG.md.jinja  CODEOWNERS  CODEOWNERS.jinja  CONTRIBUTING.md  CONTRIBUTING.md.jinja  Dockerfile  Dockerfile.jinja  README.md  README.md.jinja  REUSE.toml  REUSE.toml.jinja  SECURITY.md  SECURITY.md.jinja  codecov.yml  codecov.yml.jinja  justfile  justfile.jinja  mkdocs.yml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja  renovate.json  sonar-project.properties  sonar-project.properties.jinja  zensical.toml.jinja  {{ _copier_conf.answers_file }}.jinja
stacks/python-cli/template/.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja
stacks/python-cli/template/.github/: FUNDING.yml  FUNDING.yml.jinja  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.jinja  dependabot.yml  labeler.yml  labeler.yml.jinja  settings.yml  settings.yml.jinja
stacks/python-cli/template/.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.yml.jinja  feature_request.yml  feature_request.yml.jinja
stacks/python-cli/template/.github/actions/setup/: action.yml
stacks/python-cli/template/.github/actions/setup-python-env/: action.yml
stacks/python-cli/template/.github/workflows/: _codeql.yml  _codeql.yml.jinja  _osv-scanner.yml  _osv-scanner.yml.jinja  _security.yml  _security.yml.jinja  _trivy-image.yml  _trivy-image.yml.jinja  ci.yml  ci.yml.jinja  codeql.yml  docs.yml  docs.yml.jinja  labeler.yml  labeler.yml.jinja  release.yml  release.yml.jinja  scorecard.yml  weekly.yml  weekly.yml.jinja
stacks/python-cli/template/LICENSES/: AGPL-3.0-or-later.txt
stacks/python-cli/template/docs/: index.md  index.md.jinja
stacks/python-cli/template/src/myapp/: __init__.py  __main__.py  cli.py  config.py
stacks/python-cli/template/src/{{ module_name }}/: __init__.py.jinja  __main__.py.jinja  cli.py.jinja  config.py.jinja  exit_codes.py.jinja  logging.py.jinja
stacks/python-cli/template/tests/: __init__.py.jinja  conftest.py  conftest.py.jinja  test_cli.py
stacks/python-cli/template/tests/e2e/: test_entrypoint.py  test_entrypoint.py.jinja
stacks/python-cli/template/tests/integration/: __init__.py  test_cli.py  test_cli.py.jinja
stacks/python-cli/template/tests/unit/: test_config.py  test_config.py.jinja  test_exit_codes.py.jinja  test_logging.py.jinja  test_version.py  test_version.py.jinja
stacks/python-cli/verify/: README.md  answers.yml  preflight.py  trigger.py
